<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ViewInfo">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1,1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backBtn"
                android:layout_gravity="center" />
            <EditText android:id="@+id/inputSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:hint="@string/hint"
                android:background="@android:drawable/editbox_background_normal"
                android:inputType="textVisiblePassword"/>

            <Button
                style="@android:style/Animation.Dialog"
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/buttonClear"
                android:layout_gravity="right"
                android:clickable="true" />
        </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/syscallList"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:layout_span="3"
        android:layout_gravity="center_horizontal" />
    </TableRow>
</TableLayout>
</FrameLayout>
