
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context=".TracerActivity">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                />

            <Button
                style="@android:style/Animation.Dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/referesh"
                android:layout_gravity="end"
                android:clickable="true"
                android:background="@android:drawable/ic_popup_sync"
                />
    </LinearLayout>
    <Space
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.18" />
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1,1">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
                style="@android:style/Animation.Dialog"
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="@string/buttonTrace"
                android:clickable="true" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <Button
                style="@android:style/Animation.Dialog"
                android:id="@+id/btnInspect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="@string/btnInspect"
                android:clickable="true" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@android:style/Animation.Dialog"
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:text="@string/buttonKill"
            android:clickable="true" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
                style="@android:style/Animation.Dialog"
                android:id="@+id/btnCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:text="@string/buttonCount"
                android:clickable="true" />
    </TableRow>
</TableLayout>
</LinearLayout>

</FrameLayout>
